# life-on-disk

./: .clang-format  .gitignore  CMakeLists.txt  dna_main.cpp  file_mapper.cpp  file_mapper.h  main.cpp  patricia_trie.cpp  patricia_trie.h  patricia_trie_old.cpp
common/: common_type.h  file_manip.cpp  file_manip.h  file_mapper.cpp  file_mapper.h  help_func.h
dna/: dna.cpp  dna.h  patricia_trie.cpp  patricia_trie.h  string_btree.cpp  string_btree.h  types.h  wavelet_tree_on_disk.hpp
dna/tests/: test_dna_bit_ops.cpp
results/: Meas.ods  notes
results/diplom/src/: biblio.bib  main.tex
src/: common.h  file_mapper.cpp  file_mapper.h  misalign.h  patricia_trie.cpp  patricia_trie.h  string_btree.cpp  string_btree.h
text/: patricia_trie.cpp  patricia_trie.h  patricia_trie_old.h  string_btree.cpp  types.h
utilits/: check_symb.cpp  clear_cache.sh  comp_to_suff_arr.cpp  convert_text_dna.cpp  little_lab.sh  prepare_text  prepare_text.cpp
wavelet_tree/: CMakeLists.txt  bitvector.hpp  compr_num_buf.hpp  wavelet_tree.hpp
wavelet_tree/tests/: test_bitvector.cpp  test_compr_num_buf.cpp  test_wavelet_tree.cpp  test_wl_tree.cpp
